# store-sales-forecast

./: .gitattributes  .gitignore  README.md  flake.nix
store-sales-forecast/: pyproject.toml
store-sales-forecast/.virtual_documents/store-sales-forecast/: multivariate_store_sales.ipynb  tsa_eda.ipynb  univariate_store_sales.ipynb
store-sales-forecast/store-sales-forecast/: multivariate_store_sales.ipynb
store-sales-forecast/store-sales-forecast/.ipynb_checkpoints/: multivariate_store_sales-checkpoint.ipynb  tsa_eda-checkpoint.ipynb
